--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ html, body {
   overflow-y: auto;
 }
 
+::selection {
+  background: rgba(255,244,150,.5);
+}
+
 h1 {
   font-family: 'Calistoga', sans-serif;
   font-size: 1.5em;
@@ -134,11 +138,11 @@ main {
     cursor: pointer;
 }
 
-  .picnic, .cafe, .kitchen {
+  .picnic, .cafe, .kitchen, .diner {
     position: relative;
   }
 
-  .picnic::before, .cafe::before, .kitchen::before{
+  .picnic::before, .cafe::before, .kitchen::before, .diner::before {
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -155,7 +159,8 @@ main {
   
   .picnic:hover::before,
   .cafe:hover::before,
-  .kitchen:hover::before {
+  .kitchen:hover::before,
+  .diner:hover::before {
     opacity: 1;
   }
 
@@ -170,6 +175,11 @@ main {
   .kitchen::before {
     background-image: url("backgrounds/kitchen.svg");
   }
+
+  .diner::before {
+    background-image: url("backgrounds/diner.svg");
+  }
+  
   
  .titles {
 /*   margin-top: 50px;
@@ -390,6 +400,7 @@ main {
   place-items: center;
   width: 100%;
   height: 100%;
+  cursor: url(straw.svg), auto;
 /*   background-color: yellow; */
 }
 
@@ -397,7 +408,6 @@ main {
     display: block;
     max-height: 80%;
     max-width: 80%;
-    cursor: pointer;
     user-select: none;
     -webkit-user-drag: none;
 }
@@ -407,11 +417,11 @@ main {
     margin-left: 60px;
 }
 
-  .picnic, .cafe, .kitchen {
+  .picnic, .cafe, .kitchen, .diner {
     position: relative;
   }
 
-  .picnic::before, .cafe::before, .kitchen::before{
+  .picnic::before, .cafe::before, .kitchen::before, .diner::before {
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -428,12 +438,14 @@ main {
   
   .picnic:hover::before,
   .cafe:hover::before,
-  .kitchen:hover::before {
+  .kitchen:hover::before,
+  .diner:hover::before {
     opacity: 1;
   }
 
   .picnic::before {
     background-image: url("backgrounds/picnic.svg");
+/*      cursor: url(wineglass.svg), auto; */
   }
 
   .cafe::before {
@@ -442,6 +454,12 @@ main {
 
   .kitchen::before {
     background-image: url("backgrounds/kitchen.svg");
+/*     cursor: url(fork.svg), auto; */
+  }
+
+  .diner::before {
+    background-image: url("backgrounds/diner.svg");
+/*    cursor: url(fork.svg), auto; */
   }
   
 }
