--- a/style.css
+++ b/style.css
@@ -400,7 +400,7 @@ main {
   place-items: center;
   width: 100%;
   height: 100%;
-  cursor: url(straw.svg), auto;
+  cursor: pointer;
 /*   background-color: yellow; */
 }
 
